# grc-utils

./: .gitignore  README.md  erics_syllabifier.py  filter_dichrona.py  pyproject.toml  setup.py  test.py  utils.py
grc_utils/: __init__.py  consonants.py  erics_syllabifier.py  filter_dichrona.py  lower_grc.py  macrons_map.py  syllabifier.py  utils.py  vowels.py  vowels_long.py  weight.py
grc_utils.egg-info/: PKG-INFO  SOURCES.txt
