[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-utils"
version = "0.2.1"
description = "NLP utilities for Ancient Greek"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Albin Ruben Johannes Thörn Cleland", email = "albin.thorn_cleland@klass.lu.se" }
]

dependencies = [
    "numpy>=1.21.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Urdatorn/grc-utils"

[tool.setuptools.packages.find]
where = ["."]